docs: fix vertical misalignment between icon and header on connector docs

--- a/docusaurus/src/components/HeaderDecoration.module.css
+++ b/docusaurus/src/components/HeaderDecoration.module.css
@@ -14,6 +14,7 @@
   max-width: 40px;
   float: left;
   margin-right: 10px;
+  margin-top: 1.5rem;
 }
 
 div.connectorMetadataCallout {
